; ModuleID = '/home/carl/AnghaBench/yaf/extr_yaf_exception.c_yaf_throw_exception.c'
source_filename = "/home/carl/AnghaBench/yaf/extr_yaf_exception.c_yaf_throw_exception.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@yaf_exception_ce = common dso_local global i32* null, align 8
@YAF_ERR_BASE = common dso_local global i64 0, align 8
@yaf_buildin_exceptions = common dso_local global i32** null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @yaf_throw_exception(i64 %0, i8* %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  store i64 %0, i64* %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i32*, i32** @yaf_exception_ce, align 8
  store i32* %6, i32** %5, align 8
  %7 = load i64, i64* %3, align 8
  %8 = load i64, i64* @YAF_ERR_BASE, align 8
  %9 = and i64 %7, %8
  %10 = load i64, i64* @YAF_ERR_BASE, align 8
  %11 = icmp eq i64 %9, %10
  br i1 %11, label %12, label %25

12:                                               ; preds = %2
  %13 = load i32**, i32*** @yaf_buildin_exceptions, align 8
  %14 = load i64, i64* %3, align 8
  %15 = call i64 @YAF_EXCEPTION_OFFSET(i64 %14)
  %16 = getelementptr inbounds i32*, i32** %13, i64 %15
  %17 = load i32*, i32** %16, align 8
  %18 = icmp ne i32* %17, null
  br i1 %18, label %19, label %25

19:                                               ; preds = %12
  %20 = load i32**, i32*** @yaf_buildin_exceptions, align 8
  %21 = load i64, i64* %3, align 8
  %22 = call i64 @YAF_EXCEPTION_OFFSET(i64 %21)
  %23 = getelementptr inbounds i32*, i32** %20, i64 %22
  %24 = load i32*, i32** %23, align 8
  store i32* %24, i32** %5, align 8
  br label %25

25:                                               ; preds = %19, %12, %2
  %26 = load i32*, i32** %5, align 8
  %27 = load i8*, i8** %4, align 8
  %28 = load i64, i64* %3, align 8
  %29 = call i32 @zend_throw_exception(i32* %26, i8* %27, i64 %28)
  ret void
}

declare dso_local i64 @YAF_EXCEPTION_OFFSET(i64) #1

declare dso_local i32 @zend_throw_exception(i32*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
